# notifications-spike

./: .gitignore  README.md  agents.txt  main.py  pyproject.toml  requirements-constraints.txt  sqs.json
.claude/: settings.local.json
EventBridge/: Genesys_EventBridge_Setup_Runbook.md  receiver.py  sqs.json  testing_steps.md
analysis_results/: anomalies.csv  confidence_gap_examples.md  latency_by_channel.csv  latency_by_conversation.csv  latency_detailed.csv  latency_summary.json  text_similarity_gap_examples.md
calls/: 02ecc434-d65b-491e-9555-59aa3949d046.jsonl  032a8212-b286-47c7-9db0-543cb59cc91b.jsonl  03c409a5-d539-42e6-9418-154df2826fc7.jsonl  04055eb4-2ac7-4da1-95a6-e980ac7fc778.jsonl  0af03210-7b32-4264-a02c-2297df54f25d.jsonl  0b37ed25-68f4-4226-abeb-f89ca09bbb37.jsonl  0b3f71f3-edcc-40a0-bb14-8404116e5b55.jsonl  0c8a22d3-0b4b-4536-aa2b-6df1b972f421.jsonl  0fa60f77-244f-4baf-9025-de5277b2c390.jsonl  109f6e8b-e94a-412f-adb4-75fab3772a74.jsonl  11f7c35b-0015-42d5-baa1-b881d5c3c3eb.jsonl  12244f19-9b2a-4afa-87b1-9f9767c93a8d.jsonl  1272d4a9-e963-4690-b037-893a188b313f.jsonl  1bcecd4c-6e40-4d24-9657-6d0283560910.jsonl  1c1e1c6d-aedc-465f-8440-84ab39fa63d6.jsonl  1d53d1fd-6d55-4fe8-bd30-488f3c424f9e.jsonl  200aa9f5-085f-4874-a92e-c4cbc1305de1.jsonl  24a39592-a2b1-4ed5-bedc-7e7f6185d116.jsonl  269cba35-7b2e-48d6-bb76-4de56783ea98.jsonl  26a9df3b-7879-42e2-9e53-86d37d75d80f.jsonl  28533adf-e131-4a5f-b71a-cf9209d431ba.jsonl  28c04877-2f5d-4096-9639-39e44cb199f0.jsonl  2aa41349-4153-4c90-a39e-84272468bd87.jsonl  2ba0db7c-6248-4c5e-b41b-fa3c9862dcdc.jsonl  (+125 more)
(+116 files in other folders)
