[project]
name = "notifications-spike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
    "yt-dlp>=2026.3.17",
    "jiwer>=3.1.0",
    "scipy>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require Messages.app and iMessage (skipped by default)",
]
